######################################################
# @file     CMakeLists.txt
# @brief    The project file for CMake
# @author   dragon-archer <dragon-archer@outlook.com>
# @license  MIT License
#           Copyright (C) 2019 dragon-archer
######################################################

CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(libextcpp CXX)

SET(VERSION "0.0.1")

SET(GNU_TARGET extcpp)
SET(MSVC_TARGET libextcpp)

IF(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
	MESSAGE("Building with GCC...")
	SET(TARGET ${GNU_TARGET})
ELSEIF(${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
	MESSAGE("Building with MSVC...")
	SET(TARGET ${MSVC_TARGET})
ENDIF()

SET(BUILD_DIR build/)

INCLUDE_DIRECTORIES(./include)

AUX_SOURCE_DIRECTORY(./src SRC_DIR)

SET(SRC ${SRC_DIR})

ADD_LIBRARY(${TARGET} SHARED ${SRC})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	MESSAGE("Host OS is Windows")
	INSTALL(FILES README.md LICENSE DESTINATION ${CMAKE_PROJECT_NAME})
	INSTALL(TARGETS ${TARGET} RUNTIME DESTINATION ${CMAKE_PROJECT_NAME}/lib)
	INSTALL(DIRECTORY include/ DESTINATION ${CMAKE_PROJECT_NAME}/include FILES_MATCHING PATTERN "*.h")
	INSTALL(DIRECTORY include/ DESTINATION ${CMAKE_PROJECT_NAME}/include FILES_MATCHING PATTERN "*.hpp")
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	MESSAGE("Host OS is Linux")
	INSTALL(TARGETS ${TARGET} LIBRARY DESTINATION lib/${CMAKE_PROJECT_NAME})
	INSTALL(DIRECTORY include/ DESTINATION include/${CMAKE_PROJECT_NAME} FILES_MATCHING PATTERN "*.h")
	INSTALL(DIRECTORY include/ DESTINATION include/${CMAKE_PROJECT_NAME} FILES_MATCHING PATTERN "*.hpp")
ENDIF()

# Build a CPack driven installer package
INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_PACKAGE_DIRECTORY ${PROJECT_SOURCE_DIR}/pack)
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_RESOURCE_FILE_LICENSE  ${PROJECT_SOURCE_DIR}/LICENSE)
SET(CPACK_PACKAGE_VERSION ${VERSION})
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME ${CMAKE_PROJECT_NAME}-${VERSION})
SET(CPACK_SOURCE_IGNORE_FILES
# Microsoft Visual Studio
	${PROJECT_SOURCE_DIR}/libextcpp.sln
	${PROJECT_SOURCE_DIR}/libextcpp.vcxproj
	${PROJECT_SOURCE_DIR}/libextcpp.vcxproj.filters
	${PROJECT_SOURCE_DIR}/libextcpp.vcxproj.user
	${PROJECT_SOURCE_DIR}/.vs
# Git
	${PROJECT_SOURCE_DIR}/.git
	${PROJECT_SOURCE_DIR}/.gitignore
# CMake
	${PROJECT_SOURCE_DIR}/build
	${PROJECT_SOURCE_DIR}/CMakeSettings.json
# CPack
	${PROJECT_SOURCE_DIR}/pack
)
INCLUDE(CPack)
